# AutoClick

./: Cargo.toml
src/: main.rs
